Refactor solutions with functional programming style
FUNCTIONAL PROGRAMMING ENHANCEMENTS:
- Add trampoline pattern to homework4 Exercise1 for stack-safe recursion
- Add trampoline pattern to homework4 Exercise3 foldr implementation
- Add higher-order functions and function composition examples
- Add curried functions and partial application patterns
- Add parallel stream implementations for performance
- Add point-free style and functional composition utilities

COLLECTORS AND IMPORTS:
- Replace Collectors.toList() with .toList() (Java 16+ feature)
- Replace wildcard imports with specific imports in all test files
- Ensure consistent single import statements throughout codebase

TRAMPOLINE IMPLEMENTATIONS:
- Add Trampoline interface for stack-safe recursion
- Implement trampolined versions of recursive functions
- Provide alternative iterative implementations using streams

ADDITIONAL FUNCTIONAL FEATURES:
- Add function composition helpers
- Add curried map and transform functions
- Add higher-order function factories
- Maintain immutability and pure function principles

All 250 tests continue to pass after refactoring